# korfbal

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .prettierrc  AGENTS.md  Dockerfile-daphne  Dockerfile-uwsgi  GDPR_COMPLIANCE_REPORT.md  README.md  butrosgroot.conf  collectstatic.Dockerfile  conftest.py  daphne.Dockerfile  docker-bake.hcl  docker-compose-local.yml  docker-compose.deploy.yaml  docker-compose.deploy.yml  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.local.yml  docker-compose.prod.yaml  docker-compose.yml  eslint.config.js  eslint.config.mjs  kwt-daphne.service  kwt-uwsgi.service  manage.py  nginx.conf  package-lock.json  package.json  prettier.config.js  project.json  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt  sonar-project.properties  (+5 more)
.github/archive/: build.yml  docker-build-and-push.yml
.github/workflows/: build.yml  docker-build-and-push.yml  eslint.yml  linters.yml  sync_to_monorepo.yml
Korfbal/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
apps/audit/: __init__.py  apps.py
apps/awards/: __init__.py  apps.py
apps/club/: README.md  __init__.py  apps.py  consumers.py  models.py  routing.py  urls.py
apps/common/: README.md  __init__.py  apps.py  players_stats.py
apps/game_tracker/: README.md  __init__.py  admin.py  apps.py  consumers.py  form.py  models.py  routing.py  signals.py  tasks.py  urls.py  views.py
apps/hub/: README.md  __init__.py  admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
apps/kwt_common/: README.md  apps.py  metrics.py
apps/player/: README.md  __init__.py  admin.py  apps.py  composition.py  consumers.py  models.py  privacy.py  routing.py  signals.py  spotify.py  tasks.py  urls.py  views.py
apps/schedule/: README.md  __init__.py  admin.py  apps.py  models.py
apps/team/: README.md  __init__.py  admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
authentication/: admin.py  apps.py  auth_backend.py  models.py  urls.py  views.py
configs/collectstatic/: entrypoint.sh
configs/nginx/: nginx.conf
configs/rspack/: rspack.config.js
configs/systemctl/: kwt-daphne.service  kwt-uwsgi.service
configs/uwsgi/: generic_entrypoint.sh  uwsgi.ini
configs/webpack/: webpack.config.js
docker/: collectstatic.Dockerfile  daphne.Dockerfile  kwt-celery.Dockerfile  kwt-collectstatic.Dockerfile  kwt-daphne.Dockerfile  kwt-uwsgi.Dockerfile  nginx.Dockerfile  uwsgi.Dockerfile
docs/: domains-and-app-structure.md  project-structure.md
game_tracker/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
game_tracker/programs/: uuidv7.py
game_tracker/templatetags/: custom_tags.py
korfbal/: __init__.py  api_urls.py  asgi.py  auth_api_urls.py  authentication.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
korfbal/settings/: __init__.py  bg_auth.py  django_core.py  email.py  env.py  i18n.py  integrations.py  performance.py  rest.py  runtime.py  security.py  services.py  storage.py
korfbal/tests/: __init__.py  test_jwt_auth_urls.py
requirements/: base.txt  daphne.txt  full-windows.txt  full.txt  uwsgi.txt
static_build/css/: combined.css
static_workfile/css/: combined.css  common.css  index.css
static_workfile/json/: manifest.json
static_workfile/webpack_bundles/: club_detail.bundle.js  match_detail.bundle.js  match_tracker.bundle.js  players_selector.bundle.js  profile_detail.bundle.js  teams_detail.bundle.js
templates/: index.html
templates/authentication/: base_auth.html  confirmation_sent.html  enter_2fa_code.html  login.html  register.html
templates/hub/: index.html  (+1 more)
(+607 files in other folders)
