[project]
name = "KWT"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
	"django",
	"psycopg2-binary",
	"bg-django-mobile-detector",
	"django_ratelimit",
	"django-storages[boto3]",
	"bg_auth",
	"bg_uuidv7",
	"django-phonenumber-field[phonenumbers]",
	"python-dotenv",
]

[dependency-groups]
uwsgi = [
	"Pillow",
	"pyuwsgi",
	"bg-django-caching-paginator",
	"redis",
	"django-cryptography",
	"django-prometheus",
	"django_redis",
]
daphne = [
	"daphne",
	"channels",
	"channels-redis",
]
dev = [
	"Pillow",
	"pyuwsgi; sys_platform == 'linux'",
	"bg-django-caching-paginator",
	"redis",
	"django-cryptography",
	"django-prometheus",
	"django_redis",
	"daphne",
	"channels",
	"channels-redis",
]

[[tool.uv.index]]
name = "bg_server"
url = "https://pypi.butrosgroot.com/simple/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["korfbal", "apps"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "korfbal.settings"
python_files = ["test_*.py"]
