[project]
name = "KWT"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django",
    "psycopg2-binary",
    "bg-django-mobile-detector",
    "django-ratelimit",
    "django-storages[boto3]",
    "bg-auth",
    "bg-uuidv7",
    "django-phonenumber-field[phonenumbers]",
    "python-dotenv",
]

[dependency-groups]
uwsgi = [
    "Pillow",
    "pyuwsgi",
    "bg-django-caching-paginator",
    "redis",
    "django-cryptography",
    "django-prometheus",
    "django-redis",
]
daphne = [
    "daphne",
    "channels",
    "channels-redis",
]
dev = [
    "Pillow",
    "pyuwsgi; sys_platform == 'linux'",
    "bg-django-caching-paginator",
    "redis",
    "django-cryptography",
    "django-prometheus",
    "django-redis",
    "daphne",
    "channels",
    "channels-redis",
]

[tool.uv.sources]
bg-auth                     = { workspace = true }
bg-django-caching-paginator = { workspace = true }
bg-django-mobile-detector   = { workspace = true }
bg-uuidv7                   = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["korfbal", "apps"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "korfbal.settings"
python_files = ["test_*.py"]
